# SLAM

feature_extraction/: CMakeLists.txt  main.cpp
loop_closure/: CMakeLists.txt  Database.cpp  Database.h  Tracking.cpp  Tracking.h  fileIO.cpp  fileIO.h  main.cpp  test.cpp  test.dbow3
loop_closure/trash/: database.cpp  database.h  main.cpp
others/: FeatureExtraction.cpp
others/BA_refineF/: BA.cc  refineF.cpp
reference/HKUST_reference/: Data Structures.docx  Loop Closure.docx
testLib/: CMakeLists.txt  main.cpp
